# text2speech

./: .gitignore  README.md  app.py  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code-quality.yaml
text2speech/: __main__.py  constants.py
