[project]
name = "text2speech"
dynamic = ["version", "scripts", "dependencies", "description", "optional-dependencies", "requires-python"]

[tool.black]
line-length = 100

[tool.flake8]
exclude = [
    ".git/",
    "__pycache__/",
]

extend-ignore = [
    "E203",
    "E501",
    "W503",
]

import-order-style = "google"
max-line-length = 100
select = ["C", "E", "F", "W", "B", "B950"]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.isort]
profile = "black"
line_length = 100
force_single_line = true